# check-execution-order

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  check_execution_order.py  setup.cfg
tests/: main_test.py
