[metadata]
name = check_execution_order
version = 0.1.0
description = Automatically check execution order in Jupyter Notebooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MarcoGorelli/check-execution-order
author = Marco Gorelli
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = check_execution_order
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    check-execution-order = check_execution_order:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
